# flappy-bird-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: Config.cpp  Config.h  Game.cpp  Game.h  PipePair.cpp  PipePair.h  Player.cpp  Player.h  Sprite.cpp  Sprite.h  Utils.cpp  Utils.h  main.cpp
web/: minimal_shell.html
